.ipynb_checkpoints/mongodb_pod-checkpoint.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: mongodb-pod
  labels: 
    app: mongodb
spec:
  volumes: 
  - name: mongodb-volume
    persistentVolumeClaim: 
      claimName: local-volume-claim
  containers:
  - image: mongo
    name: mongodb-container
    ports:
    - containerPort: 27017
      protocol: TCP
    volumeMounts:
    - name: mongodb-volume
      mountPath: /data/db
