.ipynb_checkpoints/simple_pod2-checkpoint.yaml
apiVersion: v1
kind: Pod
metadata: 
    name: nodeapp-pod2
    labels: 
        app: nodetest
        env: dev
spec:
    containers:
    - image: ardconsulting/test:nodeapp
      name: nodeapp-container2
      ports:
      - containerPort: 8091
        protocol: TCP
