.ipynb_checkpoints/simple_pod_liveness-checkpoint.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nodeapp-pod
spec:
  containers:
  - image: ardconsulting/test:nodeapp-error
    name: nodeapp-container
    livenessProbe:
      httpGet:
        path: /
        port: 8091
      initialDelaySeconds: 15
    ports:
    - containerPort: 8091
      protocol: TCP
