.ipynb_checkpoints/svc_node_external-checkpoint.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service-external
spec:
  type: LoadBalancer
  selector:
    app: nodeapp
  ports:
    - port: 80
      targetPort: 8091
