.ipynb_checkpoints/ingress_node-checkpoint.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: node-ingress
spec:
  rules:
  - host: localhost
    http:        
      paths: 
      - path: /
        backend: 
          serviceName: node-service
          servicePort: 80
